Update mega menu descriptions and services for clarity and relevance

--- a/index.html
+++ b/index.html
@@ -193,11 +193,11 @@
                                                             </div>
                                                             <h4 class="mega-menu-title">9Yards Content House</h4>
                                                             <div class="mega-menu-divider"></div>
-                                                            <p class="mega-menu-description">Full-service creative agency</p>
+                                                            <p class="mega-menu-description">Digital marketing & content production</p>
                                                             <ul class="mega-menu-services">
-                                                                <li>Graphic Design</li>
+                                                                <li>Social Media Management</li>
                                                                 <li>Video Production</li>
-                                                                <li>Social Media</li>
+                                                                <li>Graphic Design</li>
                                                             </ul>
                                                             <span class="mega-menu-btn">Visit Site →</span>
                                                         </a>
@@ -208,10 +208,10 @@
                                                             </div>
                                                             <h4 class="mega-menu-title">9Yards Food</h4>
                                                             <div class="mega-menu-divider"></div>
-                                                            <p class="mega-menu-description">Authentic Ugandan cuisine delivered</p>
+                                                            <p class="mega-menu-description">Local Ugandan food, delivered fast</p>
                                                             <ul class="mega-menu-services">
-                                                                <li>Local Dishes</li>
-                                                                <li>Online Ordering</li>
+                                                                <li>Local Ugandan Dishes </li>
+                                                                <li>Order Online</li>
                                                                 <li>Fast Delivery</li>
                                                             </ul>
                                                             <span class="mega-menu-btn">Visit Site →</span>
@@ -223,10 +223,10 @@
                                                             </div>
                                                             <h4 class="mega-menu-title">9Yards Film</h4>
                                                             <div class="mega-menu-divider"></div>
-                                                            <p class="mega-menu-description">Cinematic storytelling & production</p>
+                                                            <p class="mega-menu-description">Music videos, films & corporate content</p>
                                                             <ul class="mega-menu-services">
                                                                 <li>Music Videos</li>
-                                                                <li>Films</li>
+                                                                <li>Corporate Videos </li>
                                                                 <li>Equipment Rental</li>
                                                             </ul>
                                                             <span class="mega-menu-btn">Visit Site →</span>
