Add navigation menu to offcanvas area for improved accessibility

--- a/index.html
+++ b/index.html
@@ -78,7 +78,27 @@
                     <p>Building Uganda's creative future through integrated services in content production, authentic local cuisine, and cinematic storytelling.</p>
                 </div>
                 <div class="tp-offcanvas-menu d-xl-none">
-                    <nav></nav>
+                    <nav>
+                        <ul>
+                            <li>
+                                <a href="about.html">About</a>
+                            </li>
+                            <li class="has-dropdown">
+                                <a href="our-businesses.html">Our Companies</a>
+                                <ul class="tp-submenu submenu">
+                                    <li><a href="https://contenthouse.9yards.co.ug">9Yards Content House</a></li>
+                                    <li><a href="https://food.9yards.co.ug">9Yards Food</a></li>
+                                    <li><a href="https://film.9yards.co.ug">9Yards Film</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="careers.html">Careers</a>
+                            </li>
+                            <li>
+                                <a href="contact.html">Contact</a>
+                            </li>
+                        </ul>
+                    </nav>
                 </div>
 
                 <!-- <div class="tp-offcanvas-gallery d-none d-xl-block">
@@ -174,13 +194,19 @@
                     <div class="col-xl-9 col-lg-8 col-md-6 col-8">
                         <div class="tp-header-9-box d-flex align-items-center justify-content-end justify-content-xl-between">
                             <div class="tp-header-9-menu tp-header-dropdown dropdown-white-bg d-none d-xl-block">
-                                <nav class="tp-mobile-menu-active">
+                                <nav>
                                     <ul>
                                         <li>
                                             <a href="about.html">About</a>
                                         </li>
-                                        <li class="has-mega-menu">
+                                        <li class="has-mega-menu has-dropdown">
                                             <a href="our-businesses.html">Our Companies</a>
+                                            <!-- Simple Submenu for Mobile -->
+                                            <ul class="tp-submenu submenu">
+                                                <li><a href="https://contenthouse.9yards.co.ug">9Yards Content House</a></li>
+                                                <li><a href="https://food.9yards.co.ug">9Yards Food</a></li>
+                                                <li><a href="https://film.9yards.co.ug">9Yards Film</a></li>
+                                            </ul>
                                             <!-- Mega Menu Dropdown -->
                                             <div class="mega-menu-wrapper">
                                                 <div class="mega-menu-overlay"></div>
