Refactor mega menu structure and improve image alt attributes for accessibility

--- a/index.html
+++ b/index.html
@@ -199,14 +199,8 @@
                                         <li>
                                             <a href="about.html">About</a>
                                         </li>
-                                        <li class="has-mega-menu has-dropdown">
+                                        <li class="has-mega-menu">
                                             <a href="our-businesses.html">Our Companies</a>
-                                            <!-- Simple Submenu for Mobile -->
-                                            <ul class="tp-submenu submenu">
-                                                <li><a href="https://contenthouse.9yards.co.ug">9Yards Content House</a></li>
-                                                <li><a href="https://food.9yards.co.ug">9Yards Food</a></li>
-                                                <li><a href="https://film.9yards.co.ug">9Yards Film</a></li>
-                                            </ul>
                                             <!-- Mega Menu Dropdown -->
                                             <div class="mega-menu-wrapper">
                                                 <div class="mega-menu-overlay"></div>
@@ -215,7 +209,7 @@
                                                         <!-- Content House Column -->
                                                         <a href="https://contenthouse.9yards.co.ug" class="mega-menu-column">
                                                             <div class="mega-menu-icon">
-                                                                <img src="assets/img/9Yards/mega-menu/content-house-menu.png"9Yards Content House">
+                                                                <img src="assets/img/9Yards/mega-menu/content-house-menu.png" alt="9Yards Content House">
                                                             </div>
                                                             <h4 class="mega-menu-title">9Yards Content House</h4>
                                                             <div class="mega-menu-divider"></div>
@@ -230,7 +224,7 @@
                                                         <!-- 9Yards Food Column -->
                                                         <a href="https://food.9yards.co.ug" class="mega-menu-column">
                                                             <div class="mega-menu-icon">
-                                                                <img src="assets/img/9Yards/mega-menu/food-menu.png"9Yards Food">
+                                                                <img src="assets/img/9Yards/mega-menu/food-menu.png" alt="9Yards Food">
                                                             </div>
                                                             <h4 class="mega-menu-title">9Yards Food</h4>
                                                             <div class="mega-menu-divider"></div>
@@ -245,7 +239,7 @@
                                                         <!-- 9Yards Film Column -->
                                                         <a href="https://film.9yards.co.ug" class="mega-menu-column">
                                                             <div class="mega-menu-icon">
-                                                                <img src="assets/img/9Yards/mega-menu/film-menu.png"9Yards Film">
+                                                                <img src="assets/img/9Yards/mega-menu/film-menu.png" alt="9Yards Film">
                                                             </div>
                                                             <h4 class="mega-menu-title">9Yards Film</h4>
                                                             <div class="mega-menu-divider"></div>
