Update call-to-action text from 'Get Started' to 'Let's Talk' for improved engagement

--- a/index.html
+++ b/index.html
@@ -268,8 +268,8 @@
                                 <div class="tp-header-9-btn ml-25">
                                     <a class="tp-btn-yellow-green" href="contact.html">
                                         <span>
-                                            <span class="text-1">Get Started</span>
-                                            <span class="text-2">Get Started</span>
+                                            <span class="text-1">Let's Talk</span>
+                                            <span class="text-2">Let's Talk</span>
                                         </span>
                                     </a>
                                 </div>
