Update hero section text and styling for enhanced branding and clarity

--- a/index.html
+++ b/index.html
@@ -303,20 +303,15 @@
                             <div class="col-xl-9 col-lg-8">
                                 <div class="crp-hero-ptb">
                                     <div class="crp-hero-title-box mb-35">
-                                        <h2 class="crp-hero-title tp_fade_anim">
-                                            Grow your
-                                            <i class="box d-none d-sm-inline-flex">
-                                                <span class="eye"></span>
-                                                <span class="eye"></span>
-                                            </i>
-                                            company with our
-                                            <span>corporate</span> agency
+                                        <h2 class="crp-hero-title tp_fade_anim" style="font-size: 100px; color: #ffffff;">
+                                            Building Uganda's <br>
+                                            <span style="color: #E6411C;">Creative</span> Future
                                         </h2>
+                                        <p class="tp_fade_anim" data-delay=".3" style="color: #ffffff !important; font-size: 20px; margin-top: 20px; max-width: 600px; line-height: 1.6; opacity: 1 !important; display: block; font-weight: 400;">
+                                            From digital marketing to Ugandan cuisine to film production—we're building brands that matter.
+                                        </p>
                                     </div>
                                     <div class="crp-hero-review-box d-flex align-items-center">
-                                        <div class="crp-hero-avater tp_fade_anim" data-delay=".3">
-                                            <img src="assets/img/home-09/avater/avater-1.png" alt="">
-                                        </div>
                                         <div class="crp-hero-ratting d-flex align-items-center tp_fade_anim" data-delay=".5">
                                             <div class="crp-hero-ratting-text">
                                                 <span>4.8</span>
