Update hero section description for clarity and improved messaging

--- a/index.html
+++ b/index.html
@@ -307,9 +307,10 @@
                                             Building Uganda's <br>
                                             <span style="color: #E6411C;">Creative</span> Future
                                         </h2>
-                                        <p class="tp_fade_anim" data-delay=".3" style="color: #ffffff !important; font-size: 20px; margin-top: 20px; max-width: 600px; line-height: 1.6; opacity: 1 !important; display: block; font-weight: 400;">
-                                            From digital marketing to Ugandan cuisine to film production—we're building brands that matter.
+                                        <p class="tp_fade_anim" data-delay=".3" style="color: #ffffff !important; font-size: 20px; margin-top:0; max-width: 600px; line-height: 1.6; opacity: 1 !important; display: block; font-weight: 400;">
+                                            From digital marketing and content creation, to authentic Ugandan cuisine delivery, to professional film production. Three integrated companies working together to elevate your brand and tell your story.
                                         </p>
+                                        <br>
                                     </div>
                                     <div class="crp-hero-review-box d-flex align-items-center">
                                         <div class="crp-hero-ratting d-flex align-items-center tp_fade_anim" data-delay=".5">
