--- a/index.html
+++ b/index.html
@@ -295,13 +295,11 @@
 
 
             <main>
-
-                <!-- hero area start -->
                 <div class="crp-hero-area crp-hero-bg" data-bg-color="#212282" data-background="assets/img/home-09/hero/hero-bg-shape.png">
                     <div class="container container-1550">
                         <div class="row align-items-end">
                             <div class="col-xl-9 col-lg-8">
-                                <div class="crp-hero-ptb">
+                                <div class="crp-hero-ptb crp-hero-content-spacing">
                                     <div class="crp-hero-title-box mb-35">
                                         <h2 class="crp-hero-title tp_fade_anim" style="font-size: 100px; color: #ffffff;">
                                             Building Uganda's <br>
@@ -347,7 +345,7 @@
                                                 </div>
                                                 <div class="crp-hero-ratting-details">
                                                     <a href="#">
-                                                        Based on 204 Reviews
+                                                        Trusted by 50+ Ugandan Brands
                                                         <span>
                                                             <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                                 <path d="M1 1L9 9M9 9V1M9 9H1" stroke="currentcolor" stroke-opacity="0.7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
