Update hero section text for clarity and improved messaging

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                                             <span style="color: #E6411C;">Creative</span> Future
                                         </h2>
                                         <p class="tp_fade_anim" data-delay=".3" style="color: #ffffff !important; font-size: 20px; margin-top:0; max-width: 600px; line-height: 1.6; opacity: 1 !important; display: block; font-weight: 400;">
-                                            From digital marketing and content creation, to authentic Ugandan cuisine delivery, to professional film production. Three integrated companies working together to elevate your brand and tell your story.
+                                            Digital marketing, authentic Ugandan cuisine, and professional film production. Three companies working as one.
                                         </p>
                                         <br>
                                     </div>
@@ -359,33 +359,30 @@
                                 </div>
                             </div>
                             <div class="col-xl-3 col-lg-4">
-                                <div class="crp-hero-funfact-wrap crp-hero-funfact-bg z-index-1 p-relative tp_fade_anim" data-delay=".5" data-background="assets/img/home-09/hero/funfact-bg-shape.png">
+                                <div class="crp-hero-funfact-wrap crp-hero-funfact-bg z-index-1 p-relative tp_fade_anim" data-delay=".5" data-background="assets/img/home-09/hero/funfact-bg-shape-2.png" style="color: #ffffff;">
                                     <div class="crp-hero-funfact-line d-none d-xl-inline-block"></div>
-                                    <div class="crp-hero-funfact-img">
-                                        <img src="assets/img/home-09/hero/funfact-circle-shape.png" alt="">
-                                    </div>
                                     <div class="crp-hero-funfact-top-content">
-                                        <h4>Agency Insights</h4>
-                                        <p>Building outstanding design, development and strategy</p>
+                                        <h4 style="color: #ffffff;">Our Track Record</h4>
+                                        <p style="color: #ffffff;">Real results from digital marketing, food delivery, and film production.</p>
                                     </div>
                                     <div class="crp-hero-funfact-item">
-                                        <h4><span data-purecounter-duration="1" data-purecounter-end="94" class="purecounter">0</span>+</h4>
+                                        <h4 style="color: #ffffff;"><span data-purecounter-duration="1" data-purecounter-end="50" class="purecounter">0</span>+</h4>
                                         <div class="crp-hero-funfact-more-details d-flex justify-content-between">
-                                            <p>Project Successfully <br> Completed.</p>
-                                            <a href="#">
+                                            <p style="color: #ffffff;">Creative Projects <br>Completed.</p>
+                                            <a href="about.html">
                                                 <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                    <path d="M2 16L16 2M16 2V16M16 2L2 2" stroke="#17312F" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+                                                    <path d="M2 16L16 2M16 2V16M16 2L2 2" stroke="#ffffff" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
                                                 </svg>
                                             </a>
                                         </div>
                                     </div>
                                     <div class="crp-hero-funfact-item">
-                                        <h4><span data-purecounter-duration="1" data-purecounter-end="95" class="purecounter">0</span>%</h4>
+                                        <h4 style="color: #ffffff;"><span data-purecounter-duration="1" data-purecounter-end="98" class="purecounter">0</span>%<h4>
                                         <div class="crp-hero-funfact-more-details d-flex justify-content-between">
-                                            <p>Genuine repeated happy customers.</p>
-                                            <a href="#">
+                                            <p style="color: #ffffff;">Client Satisfaction Rate.</p>
+                                            <a href="about.html">
                                                 <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                    <path d="M2 16L16 2M16 2V16M16 2L2 2" stroke="#17312F" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+                                                    <path d="M2 16L16 2M16 2V16M16 2L2 2" stroke="#ffffff" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
                                                 </svg>
                                             </a>
                                         </div>
