Enhance hero section: update description for clarity and add call-to-action button

--- a/index.html
+++ b/index.html
@@ -305,10 +305,17 @@
                                             Building Uganda's <br>
                                             <span style="color: #E6411C;">Creative</span> Future
                                         </h2>
-                                        <p class="tp_fade_anim" data-delay=".3" style="color: #ffffff !important; font-size: 20px; margin-top:0; max-width: 600px; line-height: 1.6; opacity: 1 !important; display: block; font-weight: 400;">
-                                            Digital marketing, authentic Ugandan cuisine, and professional film production. Three companies working as one.
-                                        </p>
-                                        <br>
+                                        <p class="tp_fade_anim" data-delay=".3" style="color: #ffffff !important; font-size: 20px; margin-top:0; margin-bottom: 25px; max-width: 600px; line-height: 1.6; opacity: 1 !important; display: block; font-weight: 400;">
+                                            Digital marketing and content creation, authentic Ugandan cuisine delivered fresh, and professional video production. Three integrated companies working as one to grow your brand.
+                                        </p> <br><br>
+                                        <div class="crp-hero-cta-btn tp_fade_anim" data-delay=".5">
+                                            <a class="tp-btn-yellow-green xl" href="our-businesses.html">
+                                                <span>
+                                                    <span class="text-1">Explore Our Companies</span>
+                                                    <span class="text-2">Explore Our Companies</span>
+                                                </span>
+                                            </a>
+                                        </div>
                                     </div>
                                     <div class="crp-hero-review-box d-flex align-items-center">
                                         <div class="crp-hero-ratting d-flex align-items-center tp_fade_anim" data-delay=".5">
