--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                                 </div>
                             </div>
                             <div class="col-xl-3 col-lg-4">
-                                <div class="crp-hero-funfact-wrap crp-hero-funfact-bg z-index-1 p-relative tp_fade_anim" data-delay=".5" data-background="assets/img/home-09/hero/funfact-bg-shape-2.png" style="color: #ffffff;">
+                                <div class="crp-hero-funfact-wrap crp-hero-funfact-bg z-index-1 p-relative tp_fade_anim" data-delay=".5"  style="color: #ffffff; background: linear-gradient(to bottom, #E6411C, #D93B18); border-radius: 12px; text-shadow: 0 1px 2px rgba(0,0,0,0.1);">
                                     <div class="crp-hero-funfact-line d-none d-xl-inline-block"></div>
                                     <div class="crp-hero-funfact-top-content">
                                         <h4 style="color: #ffffff;">Our Track Record</h4>
