Fix HTML structure: correct closing tag for hero section fun fact item

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                                         </div>
                                     </div>
                                     <div class="crp-hero-funfact-item">
-                                        <h4 style="color: #ffffff;"><span data-purecounter-duration="1" data-purecounter-end="98" class="purecounter">0</span>%<h4>
+                                        <h4 style="color: #ffffff;"><span data-purecounter-duration="1" data-purecounter-end="98" class="purecounter">0</span>%</div>h4>
                                         <div class="crp-hero-funfact-more-details d-flex justify-content-between">
                                             <p style="color: #ffffff;">Client Satisfaction Rate.</p>
                                             <a href="about.html">
