Rename 'our-businesses.html' to 'our-companies.html' and update links accordingly

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                 <a href="about.html">About</a>
                             </li>
                             <li class="has-dropdown">
-                                <a href="our-businesses.html">Our Companies</a>
+                                <a href="our-companies.html">Our Companies</a>
                                 <ul class="tp-submenu submenu">
                                     <li><a href="https://contenthouse.9yards.co.ug">9Yards Content House</a></li>
                                     <li><a href="https://food.9yards.co.ug">9Yards Food</a></li>
@@ -200,7 +200,7 @@
                                             <a href="about.html">About</a>
                                         </li>
                                         <li class="has-mega-menu">
-                                            <a href="our-businesses.html">Our Companies</a>
+                                            <a href="our-companies.html">Our Companies</a>
                                             <!-- Mega Menu Dropdown -->
                                             <div class="mega-menu-wrapper">
                                                 <div class="mega-menu-overlay"></div>
@@ -309,7 +309,7 @@
                                             Digital marketing and content creation, authentic Ugandan cuisine delivered fresh, and professional video production. Three integrated companies working as one to grow your brand.
                                         </p> <br><br>
                                         <div class="crp-hero-cta-btn tp_fade_anim" data-delay=".5">
-                                            <a class="tp-btn-yellow-green xl" href="our-businesses.html">
+                                            <a class="tp-btn-yellow-green xl" href="our-companies.html">
                                                 <span>
                                                     <span class="text-1">Explore Our Companies</span>
                                                     <span class="text-2">Explore Our Companies</span>
