Update banner image and styling for improved presentation

--- a/index.html
+++ b/index.html
@@ -403,8 +403,8 @@
 
                 <!-- banner area start -->
                 <div class="crp-banner-area">
-                    <div class="crp-banner-wrap">
-                        <img class="w-100" data-speed=".8" src="assets/img/home-09/banner/banner-1.jpg" alt="">
+                    <div class="crp-banner-wrap" style="overflow: hidden; position: relative;">
+                        <img class="w-100" data-speed=".8" src="assets/img/9Yards/9Yards Content House/People/9Yards-Content-House-Team-01.jpg" alt="9Yards Content House Team" style="object-fit: cover; object-position: center;">
                     </div>
                 </div>
                 <!-- banner area end -->
