--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                                             <a href="index.html"><img data-width="90px" src="assets/img/9Yards/Logos/9Yards/PNG/9-Yards-Logo-white-footer.png" alt=""></a>
                                         </div>
                                         <div class="dgm-footer-widget-paragraph mb-35">
-                                            <p>Building Uganda's creative future, one yard at a time.</p>
+                                            <p>Empowering brands through an integrated ecosystem of cinematic storytelling, digital strategy, and authentic local flavors.</p>
                                         </div>
                                         <div class="dgm-footer-widget-social">
                                             <a href="#">
@@ -464,28 +464,25 @@
                                 </div>
                                 <div class="col-xl-2 col-lg-2  col-md-3 mb-40">
                                     <div class="dgm-footer-widget dgm-footer-col-2 tp_fade_anim" data-delay=".4">
-                                        <h4 class="dgm-footer-widget-title">Service</h4>
+                                        <h4 class="dgm-footer-widget-title">Companies</h4>
                                         <div class="dgm-footer-widget-menu">
                                             <ul>
-                                                <li><a href="#">UI/UX Design</a></li>
-                                                <li><a href="#">Web Design</a></li>
-                                                <li><a href="#">Branding</a></li>
-                                                <li><a href="#">Webflow</a></li>
-                                                <li><a href="#">Development</a></li>
+                                                <li><a href="contenthouse.9yards.co.ug">Content House</a></li>
+                                                <li><a href="food.9yards.co.ug">9Yards Food</a></li>
+                                                <li><a href="film.9yards.co.ug">9Yards Film</a></li>
                                             </ul>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-xl-2 col-lg-2 col-md-3 mb-40">
                                     <div class="dgm-footer-widget dgm-footer-col-3 tp_fade_anim" data-delay=".5">
-                                        <h4 class="dgm-footer-widget-title">Company</h4>
+                                        <h4 class="dgm-footer-widget-title">Quick Links</h4>
                                         <div class="dgm-footer-widget-menu">
                                             <ul>
-                                                <li><a href="#">Home</a></li>
-                                                <li><a href="#">Agency</a></li>
-                                                <li><a href="#">Achievement</a></li>
-                                                <li><a href="#">Webflow</a></li>
-                                                <li><a href="#">Contact Us</a></li>
+                                                <li><a href="index.html">Home</a></li>
+                                                <li><a href="about.html">About</a></li>
+                                                <li><a href="careers.html">Careers</a></li>
+                                                <li><a href="contact.html">Contact Us</a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -527,19 +524,20 @@
                             <div class="row align-items-center">
                                 <div class="col-xl-4 col-lg-5 col-md-6">
                                     <div class="tp-copyright-2-left text-center text-md-start z-index-1">
-                                        <p>© 2025 <a href="#">Agntix</a>. All Rights Reserved.</p>
+                                        <p>© <span id="copyright-year"></span> <a href="#">9Yards</a>. All Rights Reserved.</p>
+                                        <script>document.getElementById('copyright-year').textContent = new Date().getFullYear();</script>
                                     </div>
                                 </div>
                                 <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                                     <div class="tp-copyright-2-middle">
-                                        <a href="mailto:agntix@gmail.com">
+                                        <a href="mailto:info@9yards.co.ug">
                                             <span>
                                                 <svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                     <path d="M13 14.6H5C2.6 14.6 1 13.4 1 10.6V5C1 2.2 2.6 1 5 1H13C15.4 1 17 2.2 17 5V10.6C17 13.4 15.4 14.6 13 14.6Z" stroke="currentcolor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
                                                     <path d="M13 5.40039L10.496 7.40039C9.672 8.05639 8.32 8.05639 7.496 7.40039L5 5.40039" stroke="currentcolor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
                                                 </svg>
                                             </span>
-                                            agntix@gmail.com
+                                            info@9yards.co.ug
                                         </a>
                                     </div>
                                 </div>
