Add about section to highlight company mission and values

--- a/index.html
+++ b/index.html
@@ -409,9 +409,30 @@
                 </div>
                 <!-- banner area end -->
 
-                <br><br><br><br>
-
-                
+                <!-- about area start -->
+                <div class="tp-about-area pt-140 pb-120 tp-bounce-trigger">
+                    <div class="container">
+                        <div class="tp-about-box p-relative">
+                            <div class="row">
+                                <div class="col-xl-3">
+                                    <div class="tp-about-title-box">
+                                        <span class="tp-section-subtitle pre tp_fade_anim">WHO WE ARE</span>
+                                    </div>
+                                </div>
+                                <div class="col-xl-9">
+                                    <div class="tp-about-wrap">
+                                        <div class="tp-about-text tp_fade_anim">
+                                            <p>
+                                                A creative powerhouse building Uganda’s future through an integrated ecosystem of cinematic storytelling, digital innovation, and authentic local flavors.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- about area end -->
 
             </main>
 
