Refactor service area section for improved layout and styling

--- a/index.html
+++ b/index.html
@@ -436,14 +436,18 @@
 
                 <!-- service area start -->
                 <div class="tp-service-area">
-                    <div class="container-fluid p-0">
-                        <div class="row gx-0">
-                            <div class="col-12">
-                                <div class="tp-service-title-box">
-                                    <span class="tp-section-subtitle pre">Services</span>
+                    <div class="container">
+                        <div class="tp-about-box p-relative">
+                            <div class="row">
+                                <div class="col-xl-3">
+                                    <div class="tp-about-title-box">
+                                        <span class="tp-section-subtitle pre tp_fade_anim">SERVICES</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
+                    </div>
+                    <div class="container-fluid p-0">
                         <div class="tp-service-pin">
                             <div class="tp-service-item tp-service-panel">
                                 <div class="row">
