Increase font size for "WHO WE ARE" and "SERVICES" section subtitles for better visibility

--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                             <div class="row">
                                 <div class="col-xl-3">
                                     <div class="tp-about-title-box">
-                                        <span class="tp-section-subtitle pre tp_fade_anim">WHO WE ARE</span>
+                                        <span class="tp-section-subtitle pre tp_fade_anim" style="font-size: 18px;">WHO WE ARE</span>
                                     </div>
                                 </div>
                                 <div class="col-xl-9">
@@ -441,7 +441,7 @@
                             <div class="row">
                                 <div class="col-xl-3">
                                     <div class="tp-about-title-box">
-                                        <span class="tp-section-subtitle pre tp_fade_anim">SERVICES</span>
+                                        <span class="tp-section-subtitle pre tp_fade_anim" style="font-size: 18px;">SERVICES</span>
                                     </div>
                                 </div>
                             </div>
