Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -560,6 +560,35 @@
                 </div>
                 <!-- service area end -->
 
+                <!-- video area start -->
+                <div class="tp-video-area black-bg mt-120 fix">
+                    <div class="container-fluid p-0">
+                        <div class="tp-video-thumb-wrap">
+                            <div class="tp-video-thumb d-none d-xl-block">
+                                <img src="assets/img/9Yards/Videos/9yards-office.jpg" alt="">
+                            </div>
+                            <div class="tp-video-thumb mb-25">
+                                <video loop="" muted="" autoplay="" playsinline="">
+                                    <source src="assets/img/9Yards/Videos/Spice Diana - Nzigulawo.mp4" type="video/mp4">
+                                </video>
+                            </div>
+                            <div class="tp-video-thumb d-none d-xl-block mb-25">
+                                <img src="assets/img/9Yards/Videos/9yards-food-lusaniya.jpg" alt="">
+                            </div>
+                            <div class="tp-video-thumb d-none d-xl-block mb-25">
+                                <img src="assets/img/9Yards/Videos/9yards-office-2.jpg" alt="">
+                            </div>
+                            <div class="tp-video-thumb d-none d-xl-block">
+                                <img src="assets/img/9Yards/Videos/sitwakalaba.jpg" alt="">
+                            </div>
+                            <div class="tp-video-thumb d-none d-xl-block">
+                                <img src="assets/img/9Yards/Videos/9yards-juice.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- video area end -->
+
             </main>
 
             <!-- footer goes here -->
