Add "Join Our Journey" button to service section for career opportunities

--- a/index.html
+++ b/index.html
@@ -625,6 +625,14 @@
                                 <div class="tp-service-5-text tp_fade_anim" data-delay=".5">
                                     <p>This is just the beginning. As we grow across East Africa, we're committed to one thing: delivering international-quality work that stays true to who we are. The future is bright, and we're building it together.</p>
                                 </div>
+                                <div class="tp-service-5-btn tp_fade_anim mt-40" data-delay=".6">
+                                    <a class="tp-btn-yellow-green" href="careers.html">
+                                        <span>
+                                            <span class="text-1">Join Our Journey</span>
+                                            <span class="text-2">Join Our Journey</span>
+                                        </span>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
