--- a/index.html
+++ b/index.html
@@ -613,25 +613,31 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-lg-4"></div>
-                            <div class="col-lg-8">
-                                <div class="tp-service-5-text tp_fade_anim" data-delay=".5">
-                                    <p>We started 9Yards with one belief: Uganda's creative industry deserves to compete on the global stage. Every project we touch, every brand we build, every story we tell, we're raising the bar for what's possible in East Africa.</p>
+                        <div class="row align-items-center gy-5">
+                            <div class="col-lg-5 col-md-12 mb-md-40">
+                                <div class="tp-vision-image tp_fade_anim" data-delay=".4">
+                                    <img src="assets/img/9Yards/Videos/9yards-office.jpg" alt="9Yards Team in Action" style="width: 100%; height: 450px; object-fit: cover; border-radius: 12px; box-shadow: 0 10px 40px rgba(0,0,0,0.1);">
                                 </div>
-                                <div class="tp-service-5-text tp_fade_anim" data-delay=".5">
-                                    <p>From our podcast studio in Kampala to film sets across the country, we're building an ecosystem where creativity, quality, and culture unite. We're not just creating content, delivering food, or producing films. We're building platforms that empower Ugandan talent and celebrate our authentic voice.</p>
-                                </div>
-                                <div class="tp-service-5-text tp_fade_anim" data-delay=".5">
-                                    <p>This is just the beginning. As we grow across East Africa, we're committed to one thing: delivering international-quality work that stays true to who we are. The future is bright, and we're building it together.</p>
-                                </div>
-                                <div class="tp-service-5-btn tp_fade_anim mt-40" data-delay=".6">
-                                    <a class="tp-btn-yellow-green" href="careers.html">
-                                        <span>
-                                            <span class="text-1">Join Our Journey</span>
-                                            <span class="text-2">Join Our Journey</span>
-                                        </span>
-                                    </a>
+                            </div>
+                            <div class="col-lg-7 col-md-12">
+                                <div class="tp-vision-content ps-lg-4">
+                                    <div class="tp-service-5-text tp_fade_anim" data-delay=".5">
+                                        <p>We started 9Yards with one belief: Uganda's creative industry deserves to compete on the global stage. Every project we touch, every brand we build, every story we tell, we're raising the bar for what's possible in East Africa.</p>
+                                    </div>
+                                    <div class="tp-service-5-text tp_fade_anim" data-delay=".5">
+                                        <p>From our podcast studio in Kampala to film sets across the country, we're building an ecosystem where creativity, quality, and culture unite. We're not just creating content, delivering food, or producing films. We're building platforms that empower Ugandan talent and celebrate our authentic voice.</p>
+                                    </div>
+                                    <div class="tp-service-5-text tp_fade_anim" data-delay=".5">
+                                        <p>This is just the beginning. As we grow across East Africa, we're committed to one thing: delivering international-quality work that stays true to who we are. The future is bright, and we're building it together.</p>
+                                    </div>
+                                    <div class="tp-service-5-btn tp_fade_anim mt-40" data-delay=".6">
+                                        <a class="tp-btn-yellow-green" href="careers.html">
+                                            <span>
+                                                <span class="text-1">Join Our Journey</span>
+                                                <span class="text-2">Join Our Journey</span>
+                                            </span>
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
