Update vision section title and heading for enhanced clarity and impact

--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
                             <div class="col-xl-12">
                                 <div class="ar-hero-title-box service-5-heading tp_fade_anim mb-80" data-delay=".3">
                                     <div class="ar-about-us-4-title-box d-flex align-items-center mb-20">
-                                        <span class="tp-section-subtitle pre tp_fade_anim">OUR VISION</span>
+                                        <span class="tp-section-subtitle pre tp_fade_anim">THE VISION</span>
                                         <div class="ar-about-us-4-icon">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="81" height="9" viewBox="0 0 81 9" fill="none">
                                                 <rect y="4" width="80" height="1" fill="#111013" />
@@ -609,7 +609,7 @@
                                             </svg>
                                         </div>
                                     </div>
-                                    <h3 class="tp-career-title">Our Vision for <span class="shape-1"><img src="assets/img/about-us/about-us-4/about-us-4-shape-1.png" alt=""></span> <br>Tomorrow</h3>
+                                    <h3 class="tp-career-title">Defining the Future of <span class="shape-1"><img src="assets/img/about-us/about-us-4/about-us-4-shape-1.png" alt=""></span>Creative Excellence.</h3>
                                 </div>
                             </div>
                         </div>
